[project]
name = "boepie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Welman", email = "brianallisterwelman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.3.1",
    "cult-cargo==0.2.0",
    "fastmcp==2.11.3",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "platformdirs==4.9.2",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "rich==14.3.2",
    "scienceplots==2.2.0",
    "scipy==1.17.0",
    "stimela",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
stimela = { git = "https://github.com/kwazzi-jack/stimela.git", branch = "rich-v14-migration" }

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
boepie = "boepie.cli:cli"
